--- a/acmart.dtx
+++ b/acmart.dtx
@@ -119,6 +119,7 @@
 %  John Owens,
 %  Joel Nider,
 %  Tobias Pape,
+%  Philip Quinn,
 %  Mathias Rav,
 %  Andreas Reichinger,
 %  Matteo Riondato,
@@ -1715,7 +1716,7 @@
 \ProvidesFile{acmart.dtx}
 %</gobble>
 %<class>\ProvidesClass{acmart}
-[2018/10/20 v1.55 Typesetting articles for the Association for
+[2018/10/21 v1.56 Typesetting articles for the Association for
 Computing Machinery]
 %    \end{macrocode}
 %
@@ -2668,7 +2669,7 @@ Computing Machinery]
 % \changes{v1.17}{2016/07/07}{Slightly decreased margins for sigs}
 % \changes{v1.29}{2017/01/22}{Increased head to 13pt}
 % \changes{v1.40}{2017/07/15}{Added heightrounded to geometry}
-% \changes{v1.55}{2018/10/16}{Make two-column layouts flush (Philip Quinn)}
+% \changes{v1.56}{2018/10/16}{Make two-column layouts flush (Philip Quinn)}
 % We use |geometry| for dimensions.  Note that the present margins do not
 % depend on the font size option---we might need to change this.
 % See \url{https://github.com/borisveytsman/acmart/issues/5#issuecomment-272881329}.
@@ -6495,7 +6496,7 @@ Computing Machinery]
 %\label{sec:acks}
 %
 % \begin{macro}{\acksname}
-% \changes{v1.55}{2018/10/16}{Added macro (Philip Quinn)}
+% \changes{v1.56}{2018/10/16}{Added macro (Philip Quinn)}
 %    \begin{macrocode}
 \newcommand\acksname{Acknowledgments}
 %    \end{macrocode}
