Added new command: \Description

--- a/README
+++ b/README
@@ -204,3 +204,5 @@ Version 1.56    Bug fixes
 		Added \flushbottom to two column formats (Philip Quinn)
 		The final punctuation for the list of concepts
 		is now period instead of semilcolon (Philip Quinn)
+		New command \Description to describe images for visually
+		impaired users.
