--- a/samples/sample-sigchi-a.tex
+++ b/samples/sample-sigchi-a.tex
@@ -51,8 +51,8 @@
   \country{UK}}
 \email{author2@author.ac.uk}
 
-\author{Third Author \\
-  Fourth Author}
+\author{Third Author}
+\author{Fourth Author}
 \affiliation{%
   \institution{L\={e}khaka Labs}
   \city{Bengaluru} \postcode{560 080} \country{India}}
