--- a/README
+++ b/README
@@ -211,3 +211,4 @@ Version 1.57    Change of \baselinestretch now produces an error
 		Booktabs is now always loaded
 		Added option `balance' to balance last page in two-column mode
 		E-mail is no longer split in addresses
+		New samples (Stephen Spencer)
