Updated bib as suggested by Petra Rübe-Pugliese

--- a/acmart.bib
+++ b/acmart.bib
@@ -1,8 +1,8 @@
 @Misc{TeXFAQ,
   title =        {{UK} List of {\TeX} Frequently Asked Questions},
   author =       {{UK \TeX{} Users Group}},
-  year =         2016,
-  howpublished = {\url{http://www.tex.ac.uk}}
+  year =         2019,
+  howpublished = {\url{https://texfaq.org}}
 }
 
 @Manual{Downes04:amsart,
