--- a/README
+++ b/README
@@ -212,4 +212,4 @@ Version 1.57    Change of \baselinestretch now produces an error
                 E-mail is no longer split in addresses
                 New samples (Stephen Spencer)
 
-Version 1.58    Suppressed spurious \vspace warnings.
+Version 1.58    Suppressed spurious warnings.
