--- a/acmart.dtx
+++ b/acmart.dtx
@@ -108,6 +108,7 @@
 %  Matthew Fluet,
 %  Paolo G.~Giarrusso,
 %  Ben Greenman,
+%  Enrico Gregorio,
 %  Jamie Davis,
 %  Luis Leiva,
 %  Ben Liblit,
@@ -1776,7 +1777,7 @@
 \ProvidesFile{acmart.dtx}
 %</gobble>
 %<class>\ProvidesClass{acmart}
-[2019/01/25 v1.58 Typesetting articles for the Association for
+[2019/02/09 v1.58 Typesetting articles for the Association for
 Computing Machinery]
 %    \end{macrocode}
 %
@@ -1862,6 +1863,7 @@ Computing Machinery]
 % (Ross Moore)}
 % \changes{1.56}{2018/11/11}{Documented \cs{Description}}
 % \changes{1.57}{2018/12/16}{Booktabs package is now the default}
+% \changes{1.58}{2019/02/09}{Changes in samples (Enrico Gregorio)}
 %
 % And the driver code:
 %    \begin{macrocode}
