Enable `screen` option to match description

--- a/samples/sample-sigconf.tex
+++ b/samples/sample-sigconf.tex
@@ -1,6 +1,6 @@
 %
 % The first command in your LaTeX source must be the \documentclass command.
-\documentclass[sigconf]{acmart}
+\documentclass[sigconf,screen]{acmart}
 
 %
 % \BibTeX command to typeset BibTeX logo in the docs
