New journal:  HEALTH.  TDSCI is now TDS

--- a/README
+++ b/README
@@ -213,3 +213,5 @@ Version 1.57    Change of \baselinestretch now produces an error
                 New samples (Stephen Spencer)
 
 Version 1.58    Suppressed spurious warnings.
+		New journal:  HEALTH.
+		TDSCI is renamed to TDS.
